# practices

./: .gitignore  .gitmodules  README.md
cpp/cpp_primer/: CMakeLists.txt
cpp/cpp_primer/ch4/: pointer_test.cpp
cpp/cpp_primer/others/: copy.cc
cpp/game_dev/: CMakeLists.txt
cpp/game_dev/GameLibs/2DActionGame/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/2DGraphics1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/2DGraphics1/src/: Framework.cpp
cpp/game_dev/GameLibs/2DTransform/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/3DCollision1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/3DGraphics1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/3DHardware1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/Final/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/InputDevices/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/Loading/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/Modules/Debug/Modules.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Modules.lastbuildstate
cpp/game_dev/GameLibs/RealTime/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/Sequence1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/GameLibs/Sound1/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cpp/game_dev/ch1/NimotsuKun/: main.cpp
cpp/game_dev/ch1/NimotsuKun2/: main.cpp
leveldb/: CMakeLists.txt
leveldb/db/: arena.cc  arena.h  arena_test.cc  db.h  random.h  skiplist.h  slice.h  status.cc  status.h  status_test.cc
rust/httpkv/: Cargo.toml
rust/httpkv/src/: main.rs
toydb/: Cargo.toml  README.md
toydb/deployments/: config.yaml
toydb/src/: error.rs  lib.rs  server.rs
toydb/src/raft/: message.rs  mod.rs  server.rs
toydb/src/raft/node/: candidate.rs  follower.rs  leader.rs  mod.rs
toydb/src/sql/: mod.rs  schema.rs
toydb/src/sql/engine/: kv.rs  mod.rs
toydb/src/sql/parser/: ast.rs  lexer.rs
toydb/src/sql/types/: mod.rs
toydb/src/storage/: mod.rs
toydb/src/storage/kv/: encoding.rs  mod.rs  std_memory.rs
toydb/src/storage/log/: memory.rs  mod.rs
toydb/src/storage/sql/: mod.rs  schema.rs
toydb/src/storage/sql/engine/: kv.rs
(+361 files in other folders)
