[package]
name = "toydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
clap = { version = "4.1.11", features = ["derive"] }
config = "0.13.3"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread", "net", "time"] }
