[package]
name = "toydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
clap = { version = "4.1.11", features = ["derive"] }
config = "0.13.3"
futures = "0.3.27"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread", "net", "time"] }
tokio-serde = { version = "0.8.0", features = ["json", "bincode"] }
tokio-util = { version = "0.7.7", features = ["full"] }
